--- a/myloandetails.html
+++ b/myloandetails.html
@@ -34,35 +34,36 @@
         * License: https://bootstrapmade.com/license/
         ======================================================== -->
       </head>
-<body onload ="check()">
 
-      <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-between">
+    <body onload ="check()">
 
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html">MaxUp</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
+    <!-- ======= Header ======= -->
+    <header id="header" class="d-flex align-items-center">
+        <div class="container d-flex justify-content-between">
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a  href="index.html">Home</a></li>
-          <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
-          <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
-          <li><a class ="active" href="services.html">LoanMe</a></li>
-          <li><a href="pricing.html">Portfolio</a></li>
-          <!-- <li><a href="blog.html">Blog</a></li> -->
-          <li><a href="contact.html">Contact</a></li>
-          <li id = "logout"><a onclick = "logout()">Logout </a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-    </div>
-  </header><!-- End Header -->
+        <div class="logo">
+            <h1 class="text-light"><a href="index.html">MaxUp</a></h1>
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        </div>
 
-  <main id="main">
+        <nav id="navbar" class="navbar">
+            <ul>
+            <li><a  href="index.html">Home</a></li>
+            <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
+            <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
+            <li><a class ="active" href="services.html">LoanMe</a></li>
+            <li><a href="pricing.html">Portfolio</a></li>
+            <!-- <li><a href="blog.html">Blog</a></li> -->
+            <li><a href="contact.html">Contact</a></li>
+            <li id = "logout"><a onclick = "logout()">Logout </a></li>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+        </div>
+    </header><!-- End Header -->
+
+    <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
@@ -80,11 +81,64 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    
-
-
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+        <div class="container">
+              <div class="icon-box text-start pt-4 pb-4" data-aos="fade-up">
+                <!-- <div class="icon"><i class="bi bi-bank"></i></div> -->
+                <h3 class=" pb-2">Loan 1</h3>
+                <p>Loan Value: <a id="LoanVal"></a></p>
+                <p>Loan Term: <a id="LoanYear"></a></p>
+                <p>Interest Rate: <a id="intRate"></a> </p>
+                <p>One time Processing Fee: <a id="OTPF"></a></p>
+                <p>Total Repayment: <a id="TotRep"></a> </p> 
+                <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
+              </div>
+        </div>
+      </section><!-- End Services Section -->
 
     </main>
-    
+ 
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+  <script> 
+    // call text box 
+    var inputTest = localStorage.getItem('valueToPass');
+    var inputTest2 = localStorage.getItem('yearToPass'); 
+    var loanholder = document.getElementById("LoanVal"); 
+    loanholder.innerHTML=inputTest;
+    document.getElementById("LoanYear").innerHTML=inputTest2; 
+
+    document.getElementById("intRate").innerHTML=localStorage.getItem('intToPass');
+    document.getElementById("OTPF").innerHTML=localStorage.getItem('OTPFtoPass');
+    document.getElementById("TotRep").innerHTML=localStorage.getItem('TotRepToPass');
+    document.getElementById("MonRep").innerHTML=localStorage.getItem('MonRepToPass');
+
+
+    function check(){
+            if(sessionStorage.getItem("username") != null){
+                document.getElementById("navbar_signin").style.display = "none";
+                document.getElementById("navbar_profile").style.display = "block";
+                document.getElementById("logout").style.display = "block";
+            }
+
+            else{
+            document.getElementById("navbar_signin").style.display = "block";
+            document.getElementById("navbar_profile").style.display = "none";
+            document.getElementById("logout").style.display = "none";
+            }
+    }
+    </script>
 </body>
 </html>
