--- a/profile.html
+++ b/profile.html
@@ -43,10 +43,11 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MAXUP</a></h1>
+        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomemsg" style = "color:black; font-size: 15px;">Welcome back Glendys!</span></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
+
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
