Revert "standardized nav bar"
This reverts commit d1cf41e0a9402a16c0d14f25d53b0f0645db44bc.

--- a/signin.html
+++ b/signin.html
@@ -43,21 +43,20 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomemsg" style = "color:black; font-size: 15px;">Welcome back Glendys!</span></h1>
+        <h1 class="text-light"><a href="index.html">MaxUp</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li id = "navbar_signin"><a a class ="active" href="signin.html">Sign Up/Login</a></li> 
           <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-          <li id = "logout"><a onclick = "logout()">Logout </a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
