--- a/setupprofile.html
+++ b/setupprofile.html
@@ -43,16 +43,16 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomemsg" style = "color:black; font-size: 15px;">Welcome back Glendys!</span></h1>
+        <h1 class="text-light"><a href="index.html">maxup</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a  href="index.html">Home</a></li>
           <li id = "navbar_signin"><a href="signin.html">Sign Up/Login</a></li>
-          <li id = "navbar_profile"><a href="profile.html">My Profile</a></li> 
+          <li id = "navbar_profile"><a class="active" href="profile.html">My Profile</a></li> 
           <li><a href="services.html">LoanMe</a></li>
           <li><a href="pricing.html">Portfolio</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
