--- a/services.html
+++ b/services.html
@@ -109,7 +109,6 @@
                 <h4 class="m-0">Loan Value</h4>
                 </div>
               </div>
-
               </br> 
             
             <div class ="row"> 
@@ -142,6 +141,26 @@
                 </div>
               </div> 
               <!-- close term loan box -->
+                <div class="col-lg-7"> 
+
+                  <p></p>
+
+                </div>
+
+              <div class="row">
+                <div class="col-lg-5 p-0"> 
+                  <label class="p-2"> Account To Transfer To </label>
+                </div>
+
+                <div class="col-lg-7">
+                  <script>var bankacc0 = sessionStorage.getItem("bankaccount0")</script>
+                    <select class="form-select text-secondary col-lg-4" aria-label="Default select example" 
+                    id="accountNum" >
+                    
+                        <br>
+                    </select>
+                </div>
+              </div> 
             </div> 
             <!-- close col-lg-6 left -->
 
