--- a/services.html
+++ b/services.html
@@ -153,10 +153,11 @@
                 </div>
 
                 <div class="col-lg-7">
-                  <script>var bankacc0 = sessionStorage.getItem("bankaccount0")</script>
+                
                     <select class="form-select text-secondary col-lg-4" aria-label="Default select example" 
                     id="accountNum" >
-                    
+                        <option id="ba0" selected="selected">  </option>
+                        <option id="ba1">2 Years</option>
                         <br>
                     </select>
                 </div>
