--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomemsg" style = "color:black; font-size: 15px;">Welcome back Glendys!</span></h1>
+        <h1 class="text-light"><a href="index.html">MaxUp</a> <span id = "welcomesg" style = "color:black; font-size: 15px;"></span></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -413,6 +413,7 @@
             document.getElementById("navbar_signin").style.display = "none";
             document.getElementById("navbar_profile").style.display = "block";
             document.getElementById("logout").style.display = "block";
+            
         }
 
         else{
@@ -425,10 +426,11 @@
   window.sessionStorage
 
   if(sessionStorage.getItem("username") != null){
-    document.getElementById("welcomemsg").style.display = "block";
+    document.getElementById("welcomesg").style.display = "block";
+    document.getElementById("welcomesg").innerHTML= "Welcome," + sessionStorage.getItem("username") ;
   }
   else{
-    document.getElementById("welcomemsg").style.display = "none";
+    document.getElementById("welcomesg").style.display = "none";
   }
 
   function logout(){
