--- a/services.html
+++ b/services.html
@@ -89,6 +89,7 @@
               <div class="icon"><i class="bi bi-bank"></i></div>
               <h4 class="title"><a href="cashloans.html">Investment Loan</a></h4>
               <p class="description">Never worry about your investment capital anymore, loan with us now!</p>
+              <p> My Credit Score </p>
               <a href="myloandetails.html">See My Current Loans</a>
             </div>
    
