--- a/captcha.html
+++ b/captcha.html
@@ -83,7 +83,7 @@
     var inputTest = localStorage.getItem('valueToPass');
     var inputTest2 = localStorage.getItem('yearToPass'); 
     var loanholder = document.getElementById("LoanVal"); 
-    loanholder.innerHTML=inputTest;
+    loanholder.innerHTML="S$ "+inputTest;
     document.getElementById("LoanYear").innerHTML=inputTest2; 
 
   
