--- a/services.html
+++ b/services.html
@@ -119,7 +119,8 @@
                       </div> 
 
                       <div class="col-lg-6"> 
-                        <input class="form-control" id="box1" type="number" min="500" value="500" name="amount" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
+                        <!-- <input type="number" id="Number" name="Number" min="1" max="100"> -->
+                        <input class="form-control" id="box1" type="text" min="1" max="400" value="500" name="box1" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
                         <p style="color:grey; font-size: x-small; text-align:left;" class="ms-2 mt-1">Minimum Amount $500</p>
                         </form>
                       </div>
@@ -274,7 +275,7 @@
     var inputTest2 = document.getElementById("box2");
     var numyear = inputTest2.value;   
 
-    localStorage.setItem('valueToPass', 'S$ '+inputTest); 
+    localStorage.setItem('valueToPass',inputTest); 
     localStorage.setItem('yearToPass', numyear +' year(s)'); 
     localStorage.setItem('intToPass', document.getElementById("intRate").innerHTML); 
     localStorage.setItem('OTPFtoPass',document.getElementById("OTPF").innerHTML)
