--- a/services.html
+++ b/services.html
@@ -120,7 +120,7 @@
 
                       <div class="col-lg-6"> 
                         <!-- <input type="number" id="Number" name="Number" min="1" max="100"> -->
-                        <input class="form-control" id="box1" type="text" min="1" max="400" value="500" name="box1" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
+                        <input class="form-control" id="box1" type="number" min="1" max="9" value="0" name="box1" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
                         <p style="color:grey; font-size: x-small; text-align:left;" class="ms-2 mt-1">Minimum Amount $500</p>
                         </form>
                       </div>
