--- a/services.html
+++ b/services.html
@@ -120,8 +120,9 @@
 
                       <div class="col-lg-6"> 
                         <!-- <input type="number" id="Number" name="Number" min="1" max="100"> -->
-                        <input class="form-control" id="box1" type="number" min="1" max="9" value="0" name="box1" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
+                        <input class="form-control" id="box1" type="number" min="500" value="500" name="box1" onkeyup="insertValue(this.value);onetimeprocfee();monthlyrepayment()"/> 
                         <p style="color:grey; font-size: x-small; text-align:left;" class="ms-2 mt-1">Minimum Amount $500</p>
+                        <p style="color:grey; font-size: x-small; text-align:left;" class="ms-2 mt-1" id="maxloanval"></p>
                         </form>
                       </div>
                   </div>
@@ -306,24 +307,17 @@
           var creditsc = sessionStorage.getItem("creditscore"); 
           document.getElementById("showscore").innerHTML = "Your Credit Score is: "+creditsc; 
 
-          // if(creditsc < 730){ 
-          //   document.getElementById("box1").setAttribute("max", "10,000"); 
-          // }
-          // else if (creditsc > 739 && creditsc <800 ){ 
-          //   document.getElementById("box1").setAttribute("max", "20,000"); 
-          // }
-          // else{ 
-          //   document.getElementById("box1").setAttribute("max", "100,000"); 
-          // }
-
           if(creditsc < 730){ 
-            document.getElementById("box1").max = 10,000; 
+            document.getElementById("box1").max ="10,000"; 
+            document.getElementById("maxloanval").innerHTML = "Maximum Amount $10,000";
           }
           else if (creditsc > 739 && creditsc <800 ){ 
-            document.getElementById("box1").max= 20,000; 
+            document.getElementById("box1").max="20,000"; 
+            document.getElementById("maxloanval").innerHTML = "Maximum Amount $20,000";
           }
           else{ 
-            document.getElementById("box1").max=100,000; 
+            document.getElementById("box1").max="1,000,000"; 
+            document.getElementById("maxloanval").innerHTML = "Maximum Amount $1,000,000";
           }
         }
 
