--- a/services.html
+++ b/services.html
@@ -283,7 +283,7 @@
     localStorage.setItem('TotRepToPass',document.getElementById("TotRep").innerHTML)
     localStorage.setItem('MonRepToPass',document.getElementById("MonRep").innerHTML)
     sessionStorage.setItem('accountToXfer',document.getElementById("accountSelect").value)
-    window.location="captcha.html, myloandetails.html"; 
+    window.location="captcha.html, myloandetails.html, profile.html"; 
   })
 
   function check(){
