--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
   function logout(){
         sessionStorage.clear();
         window.location.href = "index.html";
+        localStorage.clear();
     }
 
 </script>
