--- a/myloandetails.html
+++ b/myloandetails.html
@@ -82,6 +82,13 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Services Section ======= -->
+    <!-- <section id="services2" class="services"> -->
+      
+    <!-- </section> -->
+    <!-- End Services Section -->
+
+
+    <!-- ======= Services Section ======= -->
     <section id="services" class="services">
         <div class="container">
               <div class="icon-box text-start pt-4 pb-4" data-aos="fade-up">
@@ -124,6 +131,36 @@
     document.getElementById("OTPF").innerHTML=localStorage.getItem('OTPFtoPass');
     document.getElementById("TotRep").innerHTML=localStorage.getItem('TotRepToPass');
     document.getElementById("MonRep").innerHTML=localStorage.getItem('MonRepToPass');
+
+    // call text box 2 
+    // var inputTest01 = localStorage.getItem('valueToPass2');
+    // var inputTest02 = localStorage.getItem('yearToPass2'); 
+    // var loanholder1 = document.getElementById("LoanVal2"); 
+    // loanholder1.innerHTML=inputTest;
+    // document.getElementById("LoanYear2").innerHTML=inputTest2; 
+
+    // document.getElementById("intRate2").innerHTML=localStorage.getItem('intToPass2');
+    // document.getElementById("OTPF2").innerHTML=localStorage.getItem('OTPFtoPass2');
+    // document.getElementById("TotRep2").innerHTML=localStorage.getItem('TotRepToPass2');
+    // document.getElementById("MonRep2").innerHTML=localStorage.getItem('MonRepToPass2');
+
+
+    function second(){ 
+      if (inputTest01 != null){ 
+        document.getElementById("services2").innerHTML=
+        <div class="container">
+            <div class="icon-box text-start pt-4 pb-4" data-aos="fade-up"> 
+              <h3 class=" pb-2">Loan 2</h3>
+              <p>Loan Value: <a id="LoanVal"></a></p>
+              <p>Loan Term: <a id="LoanYear"></a></p>
+              <p>Interest Rate: <a id="intRate"></a> </p>
+              <p>One time Processing Fee: <a id="OTPF"></a></p>
+              <p>Total Repayment: <a id="TotRep"></a> </p> 
+              <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
+            </div>
+        </div>
+      }
+    }
 
 
     function check(){
