--- a/services.html
+++ b/services.html
@@ -346,7 +346,7 @@
 
          } 
        }
-       window.location="captcha.html";   
+       window.location="captcha.html, myloandetails.html, profile.html";   
    
   })
 
