--- a/services.html
+++ b/services.html
@@ -155,7 +155,7 @@
 
                       <div class="col-lg-6">
                       
-                          <select class="form-select text-secondary col-lg-4" aria-label="Default select example" 
+                        document.getElementById("bankdetails").innerHTML = htmlcode;
                           id="accountSelect" >
                           </select>
                       </div>
