add payhere button & new payloans html

--- a/myloandetails.html
+++ b/myloandetails.html
@@ -86,7 +86,15 @@
         <div class="container">
               <div class="icon-box text-start pt-4 pb-4" data-aos="fade-up">
                 <!-- <div class="icon"><i class="bi bi-bank"></i></div> -->
-                <h3 class=" pb-2">Loan 1</h3>
+                <div class="row"> 
+                  <div class="col-sm-10"> 
+                    <h3 class=" pb-2">Loan 1</h3>
+                  </div>
+                  <div class="col-sm-2"> 
+                    <a href="payloans.html" class="btn btn-secondary">Pay Here</a>
+                  </div>
+                </div>
+
                 <p>Loan Value: <a id="LoanVal"></a></p>
                 <p>Loan Term: <a id="LoanYear"></a></p>
                 <p>Interest Rate: <a id="intRate"></a> </p>
@@ -138,7 +146,14 @@
       document.getElementById("services2").innerHTML=
       `<div class="container">
           <div class="icon-box text-start pt-4 pb-4" data-aos="fade-up"> 
-            <h3 class=" pb-2">Loan 2</h3>
+            <div class="row"> 
+              <div class="col-sm-10"> 
+                <h3 class=" pb-2">Loan 2</h3>
+              </div>
+              <div class="col-sm-2"> 
+                <a href="payloans.html" class="btn btn-secondary">Pay Here</a>
+              </div>
+            </div>
             <p>Loan Value: <a id="LoanVal2"></a></p>
             <p>Loan Term: <a id="LoanYear2"></a></p>
             <p>Interest Rate: <a id="intRate2"></a> </p>
