--- a/pricing.html
+++ b/pricing.html
@@ -86,6 +86,7 @@
 
       </div>
     </section><!-- End Breadcrumbs -->
+  </br>
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
@@ -170,7 +171,7 @@
                         <label>
                           Stocks available 
                         </label>
-                        <select id="stocksectors" name="stocksectors[]" multiple="multiple" required >
+                        <select id="stocksectors" class="form-select" aria-label="Default select example"  name="stocksectors[]" multiple="multiple" required >
                           <option selected value="" disabled>Choose 5 Stocks</option>
                           
                         </select>
