--- a/myloandetails.html
+++ b/myloandetails.html
@@ -103,7 +103,8 @@
                 <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
               </div>
         </div>
-      </section><!-- End Services Section -->
+      </section>
+      <!-- End Services Section -->
 
 
       <section id="services2" class="services">
