--- a/payloans.html
+++ b/payloans.html
@@ -95,9 +95,9 @@
 
                 <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
               </div>
-              
+
               <div class="col-sm-2"> 
-                <a href="payloans.html" class="btn btn-secondary">Pay Here</a>
+                <a href="payloans.html" class="btn btn-secondary">Pay Monthly Repayment</a>
               </div>
         </div>
       </section>
