--- a/setupprofile.html
+++ b/setupprofile.html
@@ -123,12 +123,6 @@
                     <input id = "emailprofile" class="form-control" type="text">
                   </div>
               </div>
-              <div class="row">
-                <div class="col-md-12 form-group">
-                    tBank Account Number <br>
-                  <input type="number" name="acc_number" class="form-control" id="acc_number"  required>
-                </div>
-              </div>
               <div class = "row">
                 <div class="col-md-12 form-group">
                     tBank ID <br>
@@ -139,7 +133,7 @@
               <div class = "row">
                 <div class="col-md-12 form-group">
                     tBank PIN <br>
-                  <input type="text" name="acc_pin" class="form-control" id="acc_pin"  required>
+                  <input type="password" name="acc_pin" class="form-control" id="acc_pin"  required>
                 </div>
               </div>
 
