--- a/services.html
+++ b/services.html
@@ -186,7 +186,7 @@
 
                   <p class="mt-2">Total Repayment: <a id="TotRep">$ 675.00 </a> </p> 
 
-                  <p class="mt-2">Monthly Repayment: <a id="MonRep">$ 56.25 </a> </p>
+                  <p class="mt-2">Monthly Repayment: <a id="MonRep">56.25 </a> </p>
                 </div>
            
             </div>
@@ -267,7 +267,7 @@
           var calculate = (principle*int)/(yrint); 
           var calculate2 = (principle*int)/(yrint*12); 
           document.getElementById("TotRep").innerHTML="$ " + calculate.toFixed(2);
-          document.getElementById("MonRep").innerHTML="$ " + calculate2.toFixed(2); 
+          document.getElementById("MonRep").innerHTML= calculate2.toFixed(2); 
         }
 
     //passing value input to captcha.html
