--- a/payloans.html
+++ b/payloans.html
@@ -93,7 +93,7 @@
                 </div>
                 <br>
 
-                <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
+                <p class="m-0">Monthly Repayment: $<a id="MonRep"></a> </p>
               </div>
 
               <div class="col-sm-2"> 
@@ -121,7 +121,8 @@
 
 
     document.getElementById("MonRep").innerHTML=localStorage.getItem('MonRepToPass');
-    sessionStorage.setItem("Repayment", document.getElementById("MonRep").innerHTML);
+
+    sessionStorage.setItem("Repayment", localStorage.getItem('MonRepToPass'));
     //====//
     function check(){
             if(sessionStorage.getItem("username") != null){
