apply button update

--- a/services.html
+++ b/services.html
@@ -196,8 +196,7 @@
 
           <div class="container d-grid gap-2 d-md-flex mt-2 ms-6 ps-4 justify-content-md-end">
             <button class="btn btn-outline-danger me-md-2" type="button">Cancel</button>
-            <button class="btn btn-outline-success" type="button" id="ApplyButton">
-              <a href="captcha.html" class="text-success"> Apply</a></button>
+            <a class="btn btn-outline-success" type="button" id="ApplyButton" href="captcha.html" class="text-success"> Apply</a>
           </div>
 
         </div>
