--- a/payloans.html
+++ b/payloans.html
@@ -92,7 +92,7 @@
                   </div>
                 </div>
                 <br>
-
+                <p>Total Current Repayment: $<a id="totalrep"></a> </p> 
                 <p class="m-0">Monthly Repayment: $<a id="MonRep"></a> </p>
               </div>
 
@@ -119,6 +119,7 @@
   <script src="assets/js/main.js"></script>
   <script> 
     document.getElementById("MonRep").innerHTML=localStorage.getItem('MonRepToPass');
+    document.getElementById("totalrep").innerHTML=localStorage.getItem('TotRepToPass');
     sessionStorage.setItem("Repayment", localStorage.getItem('MonRepToPass'));
     //====//
     function check(){
