--- a/myloandetails.html
+++ b/myloandetails.html
@@ -99,8 +99,8 @@
                 <p>Loan Term: <a id="LoanYear"></a></p>
                 <p>Interest Rate: <a id="intRate"></a> </p>
                 <p>One time Processing Fee: <a id="OTPF"></a></p>
-                <p>Total Repayment: <a id="TotRep"></a> </p> 
-                <p class="m-0">Monthly Repayment: <a id="MonRep"></a> </p>
+                <p>Total Repayment: $<a id="TotRep"></a>.00 </p> 
+                <p class="m-0">Monthly Repayment: $<a id="MonRep"></a> </p>
               </div>
         </div>
       </section>
@@ -126,6 +126,15 @@
   <script src="assets/js/main.js"></script>
   <script> 
 
+    if(sessionStorage.getItem("Repayment")!=null){
+      var curr = localStorage.getItem('TotRepToPass');
+      var rep = sessionStorage.getItem("Repayment");
+      var ttl = curr - rep;
+      document.getElementById("TotRep").innerHTML=ttl;
+    }
+    else{
+      document.getElementById("TotRep").innerHTML=localStorage.getItem('TotRepToPass');
+    }
   
 
     // call text box 
@@ -137,7 +146,6 @@
 
 
     document.getElementById("intRate").innerHTML=localStorage.getItem('intToPass');
-    document.getElementById("TotRep").innerHTML=localStorage.getItem('TotRepToPass');
     document.getElementById("OTPF").innerHTML=localStorage.getItem('OTPFtoPass');
     document.getElementById("MonRep").innerHTML=localStorage.getItem('MonRepToPass');
 
