--- a/profile.html
+++ b/profile.html
@@ -435,7 +435,7 @@
                           var rep = sessionStorage.getItem("Repayment");
                           var calc = ttl - rep;
 
-                        tablecode += "<td> $" + calc + ".00</td>";
+                        tablecode += "<td> $" + calc + "</td>";
                         }
                         if(localStorage.getItem("MonRepToPass") != null){
                         tablecode += "<td>" + localStorage.getItem("intToPass") + "</td>";
