--- a/myloandetails.html
+++ b/myloandetails.html
@@ -99,7 +99,7 @@
                 <p>Loan Term: <a id="LoanYear"></a></p>
                 <p>Interest Rate: <a id="intRate"></a> </p>
                 <p>One time Processing Fee: <a id="OTPF"></a></p>
-                <p>Total Repayment: $<a id="TotRep"></a>.00 </p> 
+                <p>Total Repayment: $<a id="TotRep"></a></p> 
                 <p class="m-0">Monthly Repayment: $<a id="MonRep"></a> </p>
               </div>
         </div>
